--- a/sharinpix-free/src/aura/Uploader/Uploader.cmp
+++ b/sharinpix-free/src/aura/Uploader/Uploader.cmp
@@ -12,6 +12,7 @@
 	<aura:attribute name="eventIdentifier" type="string" access="global" />
 	<aura:attribute name="multiple" type="Boolean" access="global" />
 	<aura:attribute name="uploadChoice" type="string" access="global" />
+	<aura:attribute name="siteUrl" type="string" />
 
 	<aura:attribute name="loaded" type="Boolean" />
 
