--- a/sharinpix/src/components/SharinPix.component
+++ b/sharinpix/src/components/SharinPix.component
@@ -2,7 +2,6 @@
     <apex:attribute name="height" type="string" description="Height of the component." assignTo="{!heightInput}" default="500px"/>
     <apex:attribute name="id" type="string" description="Id of the iframe." assignTo="{!iframeIdInput}" default="sharinpix"/>
     <apex:attribute name="parameters" type="string" description="Parameters for the components" assignTo="{!parametersInput}" default="{}" />
-    <apex:attribute name="secreturl" type="string" description="SharinPix Secret Url" assignTo="{!secretUrlInput}" default="" />
-    {!url}
+    <apex:attribute name="secretUrl" type="string" description="SharinPix Secret Url" assignTo="{!secretUrlInput}" default="" />
     <iframe id="{!iframeId}" style="{!style}" src="{!url}"/>
 </apex:component>
