--- a/sharinpix-free/src/aura/SingleImage/SingleImage.cmp
+++ b/sharinpix-free/src/aura/SingleImage/SingleImage.cmp
@@ -1,8 +1,8 @@
 <aura:component implements="force:appHostable,flexipage:availableForAllPageTypes,flexipage:availableForRecordHome,force:hasRecordId,forceCommunity:availableForAllPageTypes" access="global" controller="ImageController">
 	<aura:attribute name="attachmentId" type="String" access="global"/>
-	<aura:attribute name="source" type="String" access="global"/>
+	<aura:attribute name="source" type="String" access="global" default="" />
 	<aura:attribute name="height" type="integer" access="global" />
-	<aura:attribute name="loading" type="Boolean"/>
+	<aura:attribute name="loading" type="Boolean" default="false" />
 
 	<aura:attribute name="text" type="String" access="global"/>
 	<aura:attribute name="linkText" type="String" access="global"/>
@@ -16,15 +16,18 @@
 	<aura:attribute name="style" type="string" access="global" />
 	<aura:handler name="change" value="{! v.attachmentId }" action="{! c.doReload }"/>
 	<div class="container" style="{! v.style }">
+
 		<aura:if isTrue="{! !empty(v.source) }">
-			<img aura:id="image" src="{! v.source }" onload="{! c.onLoaded }" alt="image" style="{! empty(v.source) ? 'display:none;' : '' }"/>
-		<aura:set attribute="else">
+			<img src="{! v.source }" alt="image" />
+		</aura:if>
+
+		<aura:if isTrue="{! empty(v.source) }">
 			<div class="img-placeholder"></div>
 			<div class="no-image">
 				No image
 			</div>
-		</aura:set>
 		</aura:if>
+
 		<aura:if isTrue="{! !empty(v.attachmentId) &amp;&amp; v.loading }">
 			<lightning:spinner alternativeText="loading in progress" />
 		</aura:if>
@@ -37,5 +40,4 @@
 			</aura:if>
 		</div>
 	</div>
-
 </aura:component>
