--- a/demo-webform/src/pages/SharinPixWebform.page
+++ b/demo-webform/src/pages/SharinPixWebform.page
@@ -23,10 +23,10 @@
                 <apex:pagemessages />
                 <apex:form >
                     <div class="form-group">
-                        <apex:inputText required="true" id="subject" styleclass="form-control" value="{!cs.subject}" html-placeholder="Subject"/>
+                        <apex:inputField required="true" id="subject" styleclass="form-control" value="{!cs.subject}" html-placeholder="Subject"/>
                     </div>
                     <div class="form-group">
-                        <apex:inputTextarea required="true" id="description" styleclass="form-control" value="{!cs.description}" html-placeholder="Describe your case..."/>
+                        <apex:inputField required="true" id="description" styleclass="form-control" value="{!cs.description}" html-placeholder="Describe your case..."/>
                     </div>
                     <iframe src="{!url}" height="400px" width="100%" style="border: 0"/>
                     <input type="submit" class="btn btn-primary" value="Create a case" />
