--- a/demo-webform/src/pages/SharinPixWebform.page
+++ b/demo-webform/src/pages/SharinPixWebform.page
@@ -1,6 +1,6 @@
 <apex:page docType="html-5.0" cache="false" 
            showHeader="false" sidebar="false" standardStylesheets="false" 
-           standardController="Case" extensions="SharinPixWebformController" 
+           Controller="SharinPixWebformController" 
            applyHtmlTag="false" applyBodyTag="false">
 <html>
 <head>
